--- a/Examples/BVSDKDemo/BVSDKDemo/Product Recommendations/View Controllers/NewNativeAdCollectionViewCell.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/Product Recommendations/View Controllers/NewNativeAdCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -55,11 +56,6 @@
                             <constraint firstItem="vhA-9w-c6n" firstAttribute="leading" secondItem="Q41-fY-AyW" secondAttribute="leading" id="tbu-ZC-jZp"/>
                             <constraint firstItem="nGh-UL-1Nr" firstAttribute="leading" secondItem="GCE-XS-tJ4" secondAttribute="leading" constant="8" id="uis-cd-V4W"/>
                         </constraints>
-                        <connections>
-                            <outlet property="bodyView" destination="vhA-9w-c6n" id="Knr-dE-Rfl"/>
-                            <outlet property="headlineView" destination="Q41-fY-AyW" id="jmi-fD-vZd"/>
-                            <outlet property="imageView" destination="8eO-XW-45N" id="o2X-na-SYS"/>
-                        </connections>
                     </view>
                 </subviews>
             </view>
